--- a/startText/css/common.css
+++ b/startText/css/common.css
@@ -1,14 +1,21 @@
+body {
+  background-color: #f6f6f6;
+}
 /* 头部导航栏模块 */
 .head {
+  background-color: #ffffff;
   top: 0;
   position: fixed;
   width: 100%;
-    padding-left: 16px;
+    /* padding-left: 16px; */
     padding-right: 55px;
   height: 52px;
   border-bottom: 1px solid rgb(231, 231, 231);
+  box-shadow: 0 1px 3px hsl(0deg 0% 7% / 10%);
+  z-index: 10;
 }
 .headerinner {
+  position: relative;
   margin: 0 auto;
   display: flex;
   width: 1300px;
@@ -97,6 +104,8 @@ input::-webkit-input-placeholder {
   margin-left: 20px;
 }
 .headimg {
+  position: relative;
+  cursor: pointer;
   width: 30px;
   height: 30px;
   margin-top: 10px;
@@ -105,4 +114,166 @@ input::-webkit-input-placeholder {
 .headimg img {
   width: 100%;
   height: 100%;
+}
+
+/* 底部制作 */
+footer {
+  width: 296px;
+}
+footer a {
+  color: #8590a6;
+  font-size: 13px;
+}
+footer a:hover {
+  color: #4775ad;
+}
+footer span {
+  color: #8590a6;
+  font-size: 13px;
+}
+footer a:nth-child(1)::after {
+  content: " · ";
+  width: 10px;
+  height: 21px;
+  display: inline-block;
+  white-space: pre;
+}
+footer a:nth-child(2)::after {
+  content: " · ";
+  width: 10px;
+  height: 21px;
+  display: inline-block;
+  white-space: pre;
+}
+footer a:nth-child(3)::after {
+  content: " · ";
+  width: 10px;
+  height: 21px;
+  display: inline-block;
+  white-space: pre;
+}
+footer a:nth-child(6)::after {
+  content: " · ";
+  width: 10px;
+  height: 21px;
+  display: inline-block;
+  white-space: pre;
+}
+footer a:nth-child(7)::after {
+  content: " · ";
+  width: 10px;
+  height: 21px;
+  display: inline-block;
+  white-space: pre;
+}
+footer a:nth-child(10)::after {
+  content: " · ";
+  width: 10px;
+  height: 21px;
+  display: inline-block;
+  white-space: pre;
+}
+footer a:nth-child(45)::after {
+  content: " · ";
+  width: 10px;
+  height: 21px;
+  display: inline-block;
+  white-space: pre;
+}
+/* 响应样式 */
+.sanjiao {
+  width: 0;
+  height:0;
+  border: 10px solid transparent;
+  border-bottom-color: #ffffff;
+  position: absolute;
+  top: 27px;
+  left: 6px;
+  z-index: 2;
+  display: none;
+}
+.shezhi {
+  width: 94px;
+  height: 194px;
+  background-color: #ffffff;
+  position: absolute;
+  top: 47px;
+  left: -30px;
+  box-shadow: 0 1px 3px hsl(0deg 0% 7% / 10%);
+  display: none;
+}
+.shezhi a:first-child {
+  margin-top: 5px;
+}
+.shezhi a {
+  height: 36px;
+  line-height: 20px;
+  font-size: 14px;
+  color: #9ca4b6;
+  display: flex;
+}
+.shezhi a:hover {
+  background-color: #f6f6f6;
+}
+.shezhi a div {
+  margin-left: 10px;
+  width: 16px;
+  height: 16px;
+  margin-right: 5px;
+}
+.shezhi a span {
+  height: 20px;
+}
+.headback {
+  width: 1920px;
+  height: 932px;
+  position: absolute;
+  left:-100px;
+  opacity: 0.5;
+  z-index: 11;
+  background-color: black;
+  display: none;
+}
+.headtiwen {
+  width: 600px;
+  height: 240px;
+  top: 15vw;
+  left: 50vh;
+  position: absolute;
+  z-index: 12;
+  display: flex;
+  display: none;
+}
+.headtiwen div:first-child {
+  width: 500px;
+  height: 100%;
+  background-color: #ffffff;
+  border-radius: 8px;
+  padding-left: 40px;
+  margin-right: 20px;
+}
+textarea {
+  font-size: 20px;
+  border: 0;
+}
+.headtiwen div:first-child div:first-child {
+  width: 100%;
+  height: 200px;
+}
+.headtiwen div:first-child div:last-child {
+  width: 100%;
+  height: 40px;
+}
+#sendIssue {
+  position: absolute;
+  width: 100px;
+  height: 40px;
+  right: 120px;
+  bottom: 20px;
+  border-radius: 4px;
+  background-color: #056de8;
+  color: #ffffff;
+}
+#sendIssue:hover {
+  background-color: #045fcb;
 }
