--- a/startText/css/myIndex.css
+++ b/startText/css/myIndex.css
@@ -1,3 +1,6 @@
+body {
+  position: relative;
+}
 .myIndexBody {
   width: 1000px;
   height: 1000px;
@@ -343,6 +346,28 @@
   font-weight: 600;
   color: #121212;
 }
+.myIndexBottomLeftwenzhang ul li {
+  width: 100%;
+  height: 80px;
+}
+.myIndexBottomLeftwenzhang ul li div {
+  width: 100%;
+  height: 50%;
+  color: #a7afbf;
+  font-size: 14px;
+  padding-left: 20px;
+}
+.myIndexBottomLeftwenzhang ul li div a {
+  width: 100%;
+  height: 100%;
+  line-height: 40px;
+  color: #121212;
+  font-size: 18px;
+  font-weight: 600;
+}
+.myIndexBottomLeftwenzhang ul li div a:hover {
+  color: #175199;
+}
 .myIndexBottomLeftzhuanlan {
   width: 100%;
   display: none;
@@ -379,17 +404,46 @@
   width: 100%;
   display: none;
 }
+#myIndexremoveshoucang {
+  font-size: 15px;
+  color: #8590a6;
+}
+#myIndexremoveshoucang:hover {
+  color: #c9ced8;
+}
 .myIndexBottomLeftshoucang > div {
   width: 100%;
   height: 50px;
   padding-left: 20px;
+  padding-right: 20px;
   padding-top: 15px;
   border-bottom: 1px solid #ebebeb;
+  display: flex;
+  justify-content: space-between;
 }
 .myIndexBottomLeftshoucang > div > a {
   font-size: 15px;
   font-weight: 600;
   color: #121212;
+}
+.myIndexBottomLeftshoucang > div > a:nth-child(2) {
+  color: #056de8;
+}
+.myIndexBottomLeftshoucang > div > a:nth-child(2):hover {
+  color: #466c9d;
+}
+.myIndexBottomLeftshoucang ul li {
+  padding-left: 20px;
+}
+.myIndexBottomLeftshoucang ul li > div {
+  width: 100%;
+  height: 30px;
+}
+.myIndexBottomLeftshoucang ul li > div a {
+  height: 30px;
+  line-height: 30px;
+  color: #121212;
+  font-weight: 600;
 }
 .myIndexBottomLeftguanzhu {
   width: 100%;
@@ -406,4 +460,92 @@
   font-size: 15px;
   font-weight: 600;
   color: #121212;
+}
+/* 响应样式 */
+.myIndexblack {
+  width: 100vw;
+  height: 100vw;
+  background-color: #121212;
+  opacity: 0.5;
+  top: -60px;
+  position: fixed;
+  display: none;
+  z-index: 15;
+}
+.hiddenshoucang {
+  width: 600px;
+  height: 600px;
+  position: fixed;
+  background-color: #ffffff;
+  z-index: 16;
+  left: calc(50vw - 300px);
+  top: calc(50vh - 300px);
+  display: none;
+}
+.hiddenshoucangTitle {
+  width: 100%;
+  height: 100px;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 100px;
+  text-align: center;
+}
+.hiddenshoucangForm form div {
+  width: 500px;
+  margin: 0 auto;
+}
+.hiddenshoucangForm form div:nth-child(1) {
+  height: 50px;
+}
+#hiddenshoucangTitle {
+  width: 100%;
+  height: 50px;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 50px;
+  padding-left: 20px;
+  border: 1px solid #ebebeb;
+}
+#hiddenshoucangTitle:focus {
+  border: 1px solid #8590a6;
+}
+.hiddenshoucangForm form div:nth-child(2) {
+  margin-top: 20px;
+}
+#hiddenshoucangMessage {
+  width: 100%;
+  padding-left: 20px;
+  border: 1px solid #ebebeb;
+}
+#hiddenshoucangMessage:focus {
+  border: 1px solid #8590a6;
+}
+.hiddenshoucangForm form div:nth-child(3) {
+  height: 30px;
+  line-height: 30px;
+}
+.hiddenshoucangForm form div:nth-child(4) {
+  height: 30px;
+  line-height: 30px;
+}
+.hiddenshoucangForm form div:nth-child(5) {
+  margin-top: 100px;
+  height: 50px;
+}
+.hiddenshoucangForm form div:nth-child(5) button {
+  width: 50%;
+  margin-top: 10px;
+  height: 30px;
+  line-height: 30px;
+  border-radius: 4px;
+}
+.hiddenshoucangForm form div:nth-child(5) button:nth-child(1) {
+  border: 1px solid #121212;
+}
+.hiddenshoucangForm form div:nth-child(5) button:nth-child(2) {
+  background-color: #056de8;
+  color: #ffffff;
+}
+.hiddenshoucangForm form div:nth-child(5) button:nth-child(2):hover {
+  background-color: #0461cf;
 }
