--- a/startText/css/ariticle.css
+++ b/startText/css/ariticle.css
@@ -83,6 +83,10 @@ body {
   color: #121212;
   font-weight: 600;
 }
+.ariticleBodyFinal ul li a img {
+  width: 50px;
+  height: 50px;
+}
 .ariticleBodyFinal ul li:nth-child(1) {
   border-bottom: 1px solid #ebebeb;
   font-weight: 600;
